--- a/static/index.html
+++ b/static/index.html
@@ -70,7 +70,7 @@
             <p class="font-light pt-13 md:pt-5 text-6xl md:text-h3 text-white">
                 COMIT is an open protocol<br>facilitating trustless<br>cross-blockchain applications
             </p>
-            <a class="btn md:ml-0 mt-17 text-6xl md:text-h3 md:mt-7 md:h-16 bg-pacific-blue"
+            <a class="btn mx-auto md:ml-0 mt-17 text-6xl md:text-h3 md:mt-7 h-32 md:h-16 bg-pacific-blue px-7"
                href="https://app.element.io/#/room/#comit:matrix.org">
                 Join us on Matrix
             </a>
