Update green button to ambrosia download link

--- a/static/index.html
+++ b/static/index.html
@@ -71,8 +71,8 @@
                 COMIT is an open protocol<br>facilitating trustless<br>cross-blockchain applications
             </p>
             <a class="btn mx-auto md:ml-0 mt-17 text-6xl md:text-h3 md:mt-7 h-32 md:h-16 bg-pacific-blue px-7"
-               href="https://app.element.io/#/room/#comit:matrix.org">
-                Join us on Matrix
+               href="https://github.com/comit-network/ambrosia/releases">
+                Download Alpha Release
             </a>
         </div>
     </div>
