We should have the mailing list more present
By now the mailing list setup has proven to be something we will use for longer,
so we should add it more presently to the homepage so that people can get in touch
and join the discussion.

--- a/static/index.html
+++ b/static/index.html
@@ -50,6 +50,12 @@
                 </li>
                 <li class="mr-20 ">
                     <a class="inline-block rounded-full hover:bg-pacific-blue py-2 px-4"
+                       href="https://lists.comit.network/mailman/listinfo/comit-dev">
+                        Mailing List
+                    </a>
+                </li>
+                <li class="mr-20 ">
+                    <a class="inline-block rounded-full hover:bg-pacific-blue py-2 px-4"
                        href="https://github.com/comit-network/">
                         GitHub
                     </a>
@@ -244,10 +250,10 @@
                 ers build multi-currency wallets, multi-hop swaps and any other<br class="hidden md:block">
                 solution where anonymity and privacy matter.
             </p>
-<!--            <a class="btn h-40 md:h-16 px-12 md:px-8  mt-17 md:mt-7 bg-klein-blue"-->
-<!--               href="https://comit.network/docs/comit-protocol/comit-protocol-stack">-->
-<!--                Discover For Yourself-->
-<!--            </a>-->
+            <a class="btn h-40 md:h-16 px-12 md:px-8  mt-17 md:mt-7 bg-klein-blue"
+               href="https://lists.comit.network/mailman/listinfo/comit-dev">
+                Join the Discussion
+            </a>
         </div>
     </div>
 </div>
@@ -380,6 +386,8 @@
             <div class="text-center mb-0 mt-auto">
                 <a class="inline-block w-22 md:w-9" href="https://app.element.io/#/room/#comit:matrix.org"><img
                         src="img/element-icon.svg" alt="Element"></a>
+                <a class="inline-block w-22 md:w-9" href="https://lists.comit.network/mailman/listinfo/comit-dev"><img
+                        src="img/mailinglist-icon.svg" alt="MailingList"></a>
                 <a class="inline-block w-22 md:w-9" href="https://github.com/comit-network"><img
                         src="img/github-icon.svg" alt="GitHub"></a>
                 <a class="inline-block w-22 md:w-9" href="https://twitter.com/comit_network"><img
