Use tag configured for both UA and GA4

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 
     <title>COMIT Network</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DHX9F27W4S"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5RW3YGGP4Y"></script>
     <link rel="shortcut icon" type="image/x-icon" href="img/docusaurus/favicon.ico"/>
 
     <link rel="stylesheet" type="text/css" href="css/app.css?v=11">
